samples/_failures_safe/1761393503_0b31f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8034191.c: In function ‘main’:
./samples/SAFE/__tmp_c8034191.c:128:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  128 |             struct TransformResult result
      |                    ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c8034191.c:128:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8034191.c:128:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8034191.c:128:20: error: expected declaration or statement at end of input
